err/softsynth.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/softsynth-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/synth'...
Compiling './lib/python3.5/site-packages/synth/channel.py'...
***   File "./lib/python3.5/site-packages/synth/channel.py", line 25
    print "Channel", self.channel_nr
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/synth/instruments'...
Compiling './lib/python3.5/site-packages/synth/instruments/OvertoneInstrument.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (OvertoneInstrument.py, line 27)
Compiling './lib/python3.5/site-packages/synth/instruments/PercussionInstrument.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PercussionInstrument.py, line 25)
Listing './lib/python3.5/site-packages/synth/midi'...
Compiling './lib/python3.5/site-packages/synth/midi/MidiHeader.py'...
***   File "./lib/python3.5/site-packages/synth/midi/MidiHeader.py", line 47
    raise TimeDivisionError, \
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/synth/midi/MidiTrack.py'...
***   File "./lib/python3.5/site-packages/synth/midi/MidiTrack.py", line 28
    print 'yikes.', chunk_size
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
